# cozy-voice-win-jobs

./: .gitignore  README.md  cosyvoice-win-server.cmd  cosyvoice-win-server.ps1  cosyvoice-win.cmd  cosyvoice-win.ps1  pyproject.toml
output/: README.md
scripts/: bootstrap_windows.cmd  bootstrap_windows.ps1
shared/: README.md
src/cosyvoice_win/: __init__.py  cli.py  server.py
tests/: test_cli_text_frontend.py  test_server_gc.py
